# security_converter

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.simple  Dockerfile.slim  METADATA_REFACTORING.md  NOTES.md  Procfile  README.md  diesel.toml  docker-compose.yml
dnd-deployment/: 01-setup-private-gke.sh  02-build-and-push.sh  03-deploy-to-gke.sh  README.md  config.env
dnd-deployment/k8s-manifests/: api.yaml  ingress-internal.yaml  postgres.yaml
documentation/: ENCRYPTION_GUIDE.md  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  ENCRYPTION_QUICK_START.md  EXECUTIVE_BRIEF.md
errors/: Cargo.toml
errors/src/: lib.rs
gke-k8s/: 00-namespace.yaml  README.md  api-config.yaml  api.yaml  ingress.yaml  postgres.yaml
graphql_api/: Cargo.toml
graphql_api/src/: database.rs  lib.rs  main.rs  schema.rs
migrations/2021-09-11-192223_add_base_models/: down.sql  up.sql
migrations/2025-10-09-085235_add_classification_schemas/: down.sql  up.sql
migrations/2025-10-10-135354-0000_create_conversion_requests/: down.sql  up.sql
migrations/2025-10-10-153407-0000_create_conversion_responses/: down.sql  up.sql
migrations/2025-10-22-231348-0000_create_graphql_audit_logs/: down.sql  up.sql
src/: common_utils.rs  database.rs  encryption.rs  lib.rs  schema.rs
src/graphql/: audit_extension.rs  loaders.rs  mod.rs  utilities.rs
src/handlers/: base.rs  endpoints.rs  mod.rs  routes.rs
src/models/: _to_implement.rs  authority.rs  classification_schema.rs  data_object.rs  (+8 more)
templates/: base.html  dashboard.html  index.html  nation_analytics.html  org_chart.html
(+35 files in other folders)
